--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.87",
-    "@iconify-json/simple-icons": "^1.2.68",
+    "@iconify-json/simple-icons": "^1.2.69",
     "@nuxt/content": "^3.11.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.4.0",
+    "@vite-pwa/nuxt": "1.1.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0",
     "tailwindcss": "^4.1.18"
