--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: ci + deploy (nuxt ssr to cpanel)
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: npm
 
       - name: Install dependencies
@@ -26,3 +26,57 @@ jobs:
       - name: Lint
         run: npm run lint --if-present
 
+      # optional: kalau mau typecheck juga, buka ini
+      # - name: Typecheck
+      #   run: npm run typecheck --if-present
+
+  deploy:
+    # hanya deploy kalau push ke master (bukan PR) dan CI sukses
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    needs: ci
+    runs-on: ubuntu-latest
+    environment: bpsksb
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build (Nuxt SSR)
+        run: npx nuxi build
+
+      - name: Prune to production deps
+        run: npm prune --omit=dev
+
+      - name: Prepare deploy bundle
+        run: |
+          rm -rf deploy
+          mkdir -p deploy
+          cp -r .output deploy/.output
+          cp -r node_modules deploy/node_modules
+          cp package.json deploy/package.json
+          cp package-lock.json deploy/package-lock.json
+
+      - name: Sanity check deploy bundle
+        run: |
+          test -f deploy/.output/server/index.mjs
+          echo "OK: deploy/.output/server/index.mjs exists"
+          ls -la deploy | head -n 50
+
+      - name: FTP Deploy (SSR runtime)
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: deploy/
+          server-dir: ${{ secrets.FTP_TARGET }}
+          dangerous-clean-slate: false
